src/components/Button/button.scss
.vui-button {
  --button-height: var(--interactive-el-height);
  --button-padding: 8px;
  --button-font-size: var(--font-size-s);
  --button-font-size-l: 1.4rem;

  &.disabled {
    cursor: not-allowed !important;
    filter: saturate(75%) opacity(50%);

    svg path {
      color: var(--color-text-light) !important;
    }
  }

  &.expand {
    width: 100%;
  }

  &.loading {
    .vui-spinner {
      opacity: 1;
    }

    .vui-button-slot {
      opacity: 0;
    }
  }

  &.icon {
    width: var(--button-height);
    padding: 0;
  }

  .vui-button-slot svg {
    display: block;
    color: var(--color-text);
    width: 17px;
    height: 17px;
  }

  &.square {
    width: var(--button-height);
    min-width: var(--button-height);
    min-height: var(--button-height);
    padding: 0;

    // Only allow default slot in square mode
    .vui-button-slot {
      display: flex;

      .vui-button-slot-end,
      .vui-button-slot-start {
        display: none;
      }
    }
  }

  &.dashed {
    border-style: dashed !important;
  }

  &.vui-button-size-l {
    font-size: var(--button-font-size-l);
  }

  &.vui-button-size-xl {
    font-size: var(--button-font-size-xl);
  }

  svg path {
    transition: var(--transition-fast);
  }

  height: var(--button-height);
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: var(--border-radius-s);
  background: transparent;
  padding-inline: var(--button-padding);
  font-size: var(--button-font-size);
  position: relative;
  transition: var(--transition-fast);
  border: 1px solid transparent;
  background-color: transparent;
  color: var(--color-text);
  font-weight: var(--font-weight-medium);
  text-decoration: none;

  // Default gray

  .vui-button-slot {
    display: grid;
    grid-template-columns: max-content 1fr max-content;
    align-items: center;
    transition: var(--transition-fast);
    opacity: 1;
    width: 100%;
    font-weight: var(--font-weight-medium);
    justify-items: center;
  }

  .vui-button-slot-start,
  .vui-button-slot-default,
  .vui-button-slot-end {
    display: flex;
    justify-content: center;
    align-items: center;
    white-space: nowrap;
  }

  .vui-button-slot-default {
    flex: 1;
  }

  .vui-button-slot-start {
    margin-right: 6px;
    justify-self: flex-start;

    &:empty {
      display: contents;
    }
  }

  .vui-button-slot-end {
    margin-left: 6px;
    justify-self: flex-end;

    &:empty {
      display: contents;
    }
  }

  .vui-spinner {
    transition: var(--transition-fast);
    opacity: 0;
    position: absolute;
    pointer-events: none;
    --spinner-color: var(--color-text);
  }

  // Variants
  &.vui-button-variant-danger {
    &:not(.plain):not(.outline) {
      color: var(--color-text);
      background-color: var(--color-bg-red-raised);

      .iconify,
      svg,
      path {
        color: var(--color-text);
      }
    }

    &.outline {
      border-color: var(--color-bg-red-lowered);
    }

    &:not(.plain):not(.disabled):not(.plain):hover,
    &:hover:not(.disabled) {
      background-color: var(--color-bg-red-lowered);
    }
  }

  &.vui-button-variant-success {
    &:not(.plain):not(.outline) {
      color: var(--color-text);
      background-color: var(--color-bg-green-raised);

      .iconify,
      svg,
      path {
        color: var(--color-text);
      }
    }

    &.outline {
      border-color: var(--color-bg-green-lowered);
    }

    &:not(.plain):not(.disabled):not(.plain):hover,
    &:hover:not(.disabled) {
      background-color: var(--color-bg-green-lowered);
    }
  }

  &.vui-button-variant-gray {
    &:not(.plain):not(.outline) {
      color: var(--color-text);
      background-color: var(--color-button-gray);

      .iconify,
      svg,
      path {
        color: var(--color-text);
      }
    }

    &.outline {
      border-color: var(--color-button-gray-hover);
    }

    &:not(.plain):not(.disabled):not(.plain):hover,
    &:hover:not(.disabled) {
      background-color: var(--color-button-gray-hover);
    }
  }

  &.vui-button-variant-fill {
    &:not(.plain):not(.outline) {
      color: var(--color-text-invert);
      background-color: var(--color-button-fill);

      .vui-spinner {
        --spinner-color: var(--color-text-invert);
      }

      .iconify,
      svg,
      path {
        color: var(--color-text-invert);
      }
    }

    &.outline {
      border-color: var(--color-button-fill-hover);

      &:hover {
        color: var(--color-text-invert);

        .iconify,
        svg,
        path {
          color: var(--color-text-invert);
        }
      }
    }

    &:not(.plain):not(.disabled):not(.plain):hover,
    &:hover:not(.disabled) {
      background-color: var(--color-button-fill-hover);

      &.plain {
        color: var(--color-text-invert);

        .iconify,
        svg,
        path {
          color: var(--color-text-invert);
        }
      }
    }
  }

  &.vui-button-variant-accent {
    &:not(.plain):not(.outline) {
      color: var(--color-text);
      background-color: var(--color-bg-accent-raised);

      .iconify,
      svg,
      path {
        color: var(--color-text);
      }
    }

    &.outline {
      border-color: var(--color-bg-accent-lowered);
    }

    &:not(.plain):not(.disabled):not(.plain):hover,
    &:hover:not(.disabled) {
      background-color: var(--color-bg-accent-lowered);
    }
  }

  &.vui-button-variant-link {
    color: var(--color-text);
    background: transparent;
    text-underline-offset: 4px;
    cursor: pointer;

    &:not(:disabled).active,
    &:not(:disabled):hover {
      text-decoration: underline;
    }
  }
}

:root.light {
  .vui-button {
    &.vui-button-variant-danger {
      &:not(.plain):not(.outline) {
        color: var(--color-text-invert);

        .iconify,
        svg,
        path {
          color: var(--color-text-invert);
        }
      }

      &.outline:hover {
        color: var(--color-text-invert);

        .iconify,
        svg,
        path {
          color: var(--color-text-invert);
        }
      }
    }

    &.vui-button-variant-success {
      &:not(.plain):not(.outline) {
        color: var(--color-text-invert);

        .iconify,
        svg,
        path {
          color: var(--color-text-invert);
        }
      }

      &.outline:hover {
        color: var(--color-text-invert);

        .iconify,
        svg,
        path {
          color: var(--color-text-invert);
        }
      }
    }
  }
}

